<resources>
    <!-- App -->
    <string name="app_name">PharmacIST</string>
    <string name="app_logo">App Logo</string>

    <!-- API Key for Google Maps -->
    <string name="api_key">AIzaSyDILjA5gjrqrskJP_GcOnpsn7FSA8tYkxg</string>

    <!-- Toolbar -->
    <string name="menu">Menu</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="notifications">Notifications</string>

    <!-- Navigation Drawer -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- Welcome page -->
    <string name="welcome_to">Welcome</string>
    <string name="welcome_description">PharmacIST allows users to find pharmacies and medicines in their surroundings, view information about pharmacies and their available stocks, search for medicines at those pharmacies and reserve medicines for future purchase</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_a_guest">Continue as a guest</string>

    <!-- Login/ Signup pages -->
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create your account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-mail</string>

    <!-- Homepage -->
    <string name="add_pharmacy">Add Pharmacy</string>

    <!-- Add Pharmacy page -->
    <string name="pharmacy_details">Pharmacy Details</string>
    <string name="name">Name</string>
    <string name="farmacia_progresso_taguspark">Farmácia Progresso Taguspark</string>
    <string name="address">Address</string>
    <string name="pick_on_map">Pick on map</string>
    <string name="current_location">Current location</string>
    <string name="manual_address">Manual address</string>
    <string name="photo">Photo</string>
    <string name="pharmacy_image">Pharmacy Image</string>
    <string name="av_prof_anibal_cavaco_silva">Av. Prof. Aníbal Cavaco Silva Edf Qualidade A2</string>

    <!-- Pharmacy Information Panel page -->
    <string name="available_medicines">Available Medicines</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="lookup_medicines">Lookup Medicines</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="purchase_medicine">Purchase medicine</string>
    <string name="purchase">Purchase</string>

    <!-- Medicine Information Panel page -->
    <string name="medicine_image">Medicine Image</string>
    <string name="availability_in_pharmacies">Availability in Pharmacies</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="_0m">0m</string>
    <string name="circle_background">Circle Background</string>
    <string name="shopping_cart_icon">Shopping cart icon</string>

    <!-- Add Medicine page -->
    <string name="brufen_purpose">Brufen is an everyday painkiller for…</string>
    <string name="purpose_preferred_use">Purpose/ Preferred Use</string>
    <string name="brufen">Brufen</string>
    <string name="tap_to_scan_medicine_barcode">Tap to scan medicine barcode</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="box_photo">Box Photo</string>
    <string name="medicine_box_photo">Medicine Box Photo</string>
    <string name="success">Success</string>
    <string name="medicine_found">Medicine found</string>
    <string name="done">Done</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="medicine_not_found">Medicine not found</string>
    <string name="add_new_medicine">Add new medicine</string>

    <!-- Lookup Medicine page -->
    <string name="medicine_icon">Medicine Icon</string>

</resources>