<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/purchase_layout"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"
        android:background="@drawable/dialog_bkg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <TextView
            android:id="@+id/purchase_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_medicine"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingTop="28dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchase_text"
            app:layout_constraintBottom_toTopOf="@id/purchase_button" >

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/quantity"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/medicine_quantity"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/_1"
                android:inputType="number"
                android:paddingHorizontal="10dp"
                android:gravity="center"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/purchase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/purchase"
            android:backgroundTint="@color/strong_blue"
            app:cornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/circle_bkg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/circle_background"
        android:src="@drawable/circle_bkg"
        android:layout_marginHorizontal="40dp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shopping_cart_icon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/shopping_cart_icon"
        android:src="@drawable/baseline_add_shopping_cart_24"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>