<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ist_blue"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_back_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentTop="true"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/login_text"
        android:text="@string/login_to_your_account"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/login_banner"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text_bkg"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:textSize="15sp"
            android:inputType="text"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bkg"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_signup_button_bkg"
            android:text="@string/login"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/pharmac_ist_logo_transparent" />

    </LinearLayout>

</RelativeLayout>