<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPharmacyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Add Pharmacy"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>

    <TextView
        android:id="@+id/details_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="30dp"
        android:text="@string/pharmacy_details"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scroll_pharmacy_form" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_pharmacy_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/add_pharmacy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_pharmacy_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/farmacia_progresso_taguspark"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/address_text" />

            <TextView
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/address"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/address_options_tab"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/address_options_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/address_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/address_options_viewpager">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_on_map" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual_address" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/address_options_viewpager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/address_options_tab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/photo_text"
                app:layout_constraintHeight_percent="0.3"/>

            <TextView
                android:id="@+id/photo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/photo"
                app:layout_constraintTop_toBottomOf="@+id/address_options_viewpager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/take_photo_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/take_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/take_photo_bkg"
                android:drawableStart="@drawable/outline_photo_camera_24"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="@string/photo"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/photo_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/photo" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/pharmacy_image"
                app:layout_constraintTop_toBottomOf="@+id/take_photo_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/add_pharmacy_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_signup_button_bkg"
        android:text="Add"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/scroll_pharmacy_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"/>



</androidx.constraintlayout.widget.ConstraintLayout>