<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".LoginTabFragment" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_bkg"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="8dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bkg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="18sp"
            app:cornerRadius="30dp"
            android:onClick="startPharmacIST" />

    </LinearLayout>


</ScrollView>