<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="10dp"
    tools:context=".fragments.AddMedicineManualFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_text"
        app:title="Add Medicine Stock"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/strong_blue" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/medicine_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/medicine_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/edit_text_bkg"
        android:hint="@string/brufen"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/purpose_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/purpose_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/purpose_preferred_use"
        app:layout_constraintBottom_toTopOf="@id/medicine_purpose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicine_name" />

    <EditText
        android:id="@+id/medicine_purpose"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_bkg"
        android:hint="@string/brufen_purpose"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/constraint_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purpose_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/medicine_purpose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/box_photo" >

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/quantity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/medicine_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/medicine_quantity"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_bkg"
            android:hint="@string/_1"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/box_photo_text"
            app:layout_constraintStart_toEndOf="@id/quantity_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/box_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/camera_photo"
            app:layout_constraintStart_toEndOf="@id/medicine_quantity"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/camera_photo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/outline_photo_camera_black_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/file_photo"
            app:layout_constraintStart_toEndOf="@id/box_photo_text"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/file_photo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/baseline_attach_file_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/camera_photo"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/box_photo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/medicine_box_photo"
        app:layout_constraintBottom_toTopOf="@id/add_medicine_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_frame" />

    <Button
        android:id="@+id/add_medicine_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_signup_button_bkg"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/box_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>